[package]
name = "mctp-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
c2rust-bitfields = "0.3.0"
cascade = "1.0.0"
derive_builder = "0.11.2"
hexyl = "0.10.0"
mctp-base-lib = { version = "0.1.0", path = "mctp-base-lib" }
mctp-emu-derive = { version = "0.1.0", path = "mctp-emu-derive" }
num_enum = "0.5.7"
serde = { version = "1.0.144", features = ["derive"] }
smart-default = "0.6.0"
smbus-pec = "1.0.1"
thiserror = "1.0.35"
tokio = { version = "1.21", features = ["full"] }

[dev-dependencies]
buildstructor = "0.5.0"
libc = "0.2.132"

[[example]]
name = "basic_bus_owner_loop"
path = "examples/basic_bus_owner_loop.rs"


[[example]]
name = "example_virtual_network"
path = "examples/example_virtual_network.rs"
