[package]
name = "mctp-base-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
buildstructor = "0.5.0"
bytes = { version = "1.2.1", features = ["serde"] }
c2rust-bitfields = "0.3.0"
cascade = "1.0.0"
hexyl = "0.10.0"
libc = "0.2.132"
mctp-emu-derive = { version = "0.1.0", path = "../mctp-emu-derive" }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"
num_enum = "0.5.7"

#[dev-dependencies]
#anyhow = "1.0.65"
